--- a/eventapp/src/css/dashboard.css
+++ b/eventapp/src/css/dashboard.css
@@ -3,6 +3,10 @@
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
+
+  background: #92ad94;
+  color: #0c1618;
+  /*text-align: right;*/
 }
 
 body {
@@ -12,7 +16,46 @@ body {
 .Dashboard-header {
   width: 100%;
   height: 100vh;
-  background-color: #748b75;
+  background-color: red;
   background-size: cover;
   background-position: center;
+}
+.btn {
+  display: block;
+  margin: 50px auto;
+  width: fit-content;
+  border: 1px solid #0c1618;
+  padding: 14px 50px;
+  border-radius: 6px;
+  text-decoration: none;
+  color: #92ad94;
+  transition: background 0.5s;
+}
+.btn:hover {
+  background: #0c1618;
+}
+
+/* =- Site Header -= */
+.header-text {
+  margin-top: 20%;
+  font-size: 30px;
+}
+
+.header-text h1 {
+  font-size: 60px;
+  margin-top: 20px;
+}
+
+/* =- Sub-Header -= */
+.sub-header {
+  text-align: left;
+  font: monospace;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 0;
+  background: #748b75;
+}
+
+.font-xl {
+  font-size: 42px;
 }
