--- a/eventapp/src/css/dashboard.module.css
+++ b/eventapp/src/css/dashboard.module.css
@@ -1,18 +1,8 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  box-sizing: border-box;
-
-  background: #92ad94;
-  color: #0c1618;
-  /*text-align: right;*/
-}
-
-body {
-  background: #92ad94;
+/* body {
+  background: #f6f9f3;
   color: #503d42;
-}
+  column-width: 120px; */
+
 .Dashboard-header {
   width: 100%;
   height: 100vh;
