Created a routing system so the dashboard is at "/dashboard", refreshing the page no longer logs the user out, created logout button

--- a/eventapp/src/css/login.module.css
+++ b/eventapp/src/css/login.module.css
@@ -27,6 +27,7 @@ body {
   margin: 10px 0;
   font-size: 20px;
   padding: 10px;
+  margin: 10px;
 }
 
 /* Login Button */
@@ -41,6 +42,6 @@ body {
 }
 
 .btn:hover {
-  background: #0c1618;
+  background: #748b75;
   color: #f5fbef;
 }
