--- a/eventapp/src/css/dashboard.module.css
+++ b/eventapp/src/css/dashboard.module.css
@@ -41,3 +41,16 @@
 .delete-btn:hover {
   transform: scale(1.1);
 }
+
+.logout-btn {
+  background-color: transparent;
+  border: none;
+  padding: 4px 8px;
+  transition: all 0.3s ease-in-out;
+  margin-right: 4px;
+  font-weight: 700;
+}
+
+.logout-btn:hover {
+  transform: scale(1.1);
+}
