--- a/eventapp/src/css/login.module.css
+++ b/eventapp/src/css/login.module.css
@@ -10,6 +10,11 @@ body {
   background-color: #f5fbef;
   font-size: 30px;
   color: #0c1618;
+
+  background-image: url("https://images.unsplash.com/photo-1459749411175-04bf5292ceea?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80");
+  background-repeat: no-repeat;
+  background-size: 50% 100%;
+  background-position: right;
 }
 
 .form {
